<resources>
    <string name="app_name">DoNotLate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">로딩중</string>
    <string name="splash">당신의 약속과 함께</string>
    <string name="image_back">뒤로가기 이미지 입니다</string>
    <string name="image_calendar">날짜 선택 이미지 입니다</string>
    <string name="image_time">시간 선택 이미지 입니다</string>
    <string name="image_line">구분선 이미지 입니다</string>
    <string name="image_decoration">장식용 이미지 입니다</string>
    <string name="image_logo">로고 이미지 입니다</string>
    <string name="image_password">비밀번호 가림 이미지 입니다</string>
    <string name="image_google">구글 로고 이미지 입니다</string>
    <string name="image_kakao">카카오 로고 이미지 입니다</string>
    <string name="image_button">버튼 이미지 입니다</string>
    <string name="image_setting">설정 버튼 이미지 입니다</string>
    <string name="image_notification">알림 버튼 이미지 입니다</string>
    <string name="image_more">더보기 이미지 입니다</string>
    <string name="image_map">지도 이미지 입니다</string>
    <string name="image_user">유저 이미지 입니다</string>
    <string name="image_share">공유 이미지 입니다</string>
    <string name="image_exit">나가기 이미지 입니다</string>
    <string name="room_start_text1">우리 지금 만나,</string>
    <string name="room_start_text2">약속</string>
    <string name="room_start_text3">을 잡아주세요.</string>
    <string name="room_start_text4">약속 제목</string>
    <string name="room_start_text5">제목을 입력해 주세요</string>
    <string name="room_start_text6">약속 날짜</string>
    <string name="room_start_text7">아이콘을 눌러 날짜를 선택 해주세요</string>
    <string name="room_start_text8">약속 시간</string>
    <string name="room_start_text9">아이콘을 눌러 시간을 선택 해주세요</string>
    <string name="room_start_text10">벌칙 내용</string>
    <string name="room_start_text11">예) 교통비 내주기</string>
    <string name="room_start_text12">늦는 친구에게 주어질 벌칙을 정해 주세요!</string>
    <string name="room_start_text13">다음</string>
    <string name="room_map_text1">당장 만나,</string>
    <string name="room_map_text2">목적지</string>
    <string name="room_map_text3">를 정해주세요.</string>
    <string name="room_map_text4">목적지를 검색해주세요</string>
    <string name="room_map_text5">검색</string>
    <string name="room_map_text6">다음</string>
    <string name="room_map_text7">검색 결과</string>
    <string name="room_friend_text1">우리, 친구 아이가!</string>
    <string name="room_friend_text2">친구</string>
    <string name="room_friend_text3">를 선택해 주세요.</string>
    <string name="room_friend_text4">친구를 검색해 보세요</string>
    <string name="room_friend_text5">검색</string>
    <string name="room_friend_text6">초대 가능한 친구 목록 입니다.</string>
    <string name="room_friend_text7">다음</string>
    <string name="room_result_text1">약속결과</string>
    <string name="room_result_text2">입니다.</string>
    <string name="room_result_text3">확인해주세요.</string>
    <string name="room_result_text4">약속 이름</string>
    <string name="room_result_text5">약속 날짜</string>
    <string name="room_result_text6">벌칙 내용</string>
    <string name="room_result_text7">참여자</string>
    <string name="room_result_text8">약속 장소</string>
    <string name="room_result_text9">확인</string>
    <string name="chat_start">출발</string>
    <string name="chat_arrive">도착</string>
    <string name="chat_send">보내기</string>
    <string name="list_text1">의 약속이 얼마남지 않았습니다</string>
    <string name="list_text2">예정되어 있는 \n약속이 없습니다.</string>
    <string name="map_select">시간을 선택해 주세요</string>
    <string name="map_start">출발</string>
    <string name="map_complete">완료</string>
    <string name="map_detail">자세히</string>
    <string name="number1">1번</string>
    <string name="number2">2번</string>
    <string name="number3">3번</string>
    <string name="number4">4번</string>
    <string name="number5">5번</string>
    <string name="number6">6번</string>
    <string name="number7">7번</string>
    <string name="number8">8번</string>
    <string name="complete">입력 완료</string>
    <string name="login_top_title1">환영합니다.</string>
    <string name="login_top_title2">로그인</string>
    <string name="login_top_title3">을 진행해주세요.</string>
    <string name="login_edit_text1">이메일을 입력해 주세요.</string>
    <string name="login_edit_text2">비밀번호를 입력해 주세요.</string>
    <string name="login_text1">이메일을 확인해 주세요.</string>
    <string name="login_text2">비밀번호가 일치하지 않습니다.</string>
    <string name="login_text3">계정이 없으신가요?</string>
    <string name="login_text4">Or sign up with</string>
    <string name="login_sign_up_line"><u>회원가입</u></string>
    <string name="sign_up_top_title1">회원가입</string>
    <string name="sign_up_top_title2">후,</string>
    <string name="sign_up_top_title3">약속을 잡으러 가볼까요?</string>
    <string name="sign_up_edit_text1">닉네임을 입력해 주세요.</string>
    <string name="sign_up_edit_text2">비밀번호를 다시 입력해 주세요.</string>
    <string name="sign_up_text1">닉네임에 특수문자가 포함되어 있습니다.</string>
    <string name="sign_up_text2">비밀번호는 8~20자의 영문과 숫자로 조합해 주세요.</string>
    <string name="sign_up_text3">이미 계정이 있으세요?</string>
    <string name="sign_up_login_line"><u>로그인</u></string>
    <string name="cal_top_title1">님</string>
    <string name="cal_text1">소비 분석</string>
    <string name="cal_text2">총 지출\n\n</string>
    <string name="cal_text3">진행 약속\n\n</string>
    <string name="cal_text4">정산 중</string>
    <string name="cal_text5">정산을 완료하지 않은 내역이 있습니다.</string>
    <string name="cal_text6">정산 내역</string>
    <string name="cal_text7">정산이 완료되었습니다.</string>
    <string name="cal_btn_text">계산하기</string>
    <string name="cal_activity_text1">원</string>
    <string name="cal_activity_text2">건</string>
    <string name="cal_activity_text3">정산 상태를 변경할까요?</string>
    <string name="cal_activity_text4">네</string>
    <string name="cal_activity_text5">아니오</string>
    <string name="cal_activity_text6">삭제하기</string>
    <string name="cal2_top_title1">정산을 시작해볼까요?</string>
    <string name="cal2_top_title2">정산이력</string>
    <string name="cal2_top_title3">을 입력해주세요.</string>
    <string name="cal2_text1">지출 제목</string>
    <string name="cal2_text2">지출 날짜</string>
    <string name="cal2_text3">지출 카테고리</string>
    <string name="cal2_edit_text1">지출 설명을 입력해주세요.</string>
    <string name="cal2_edit_text2">아이콘을 눌러 날짜를 선택해주세요.</string>
    <string name="cal2_btn_text">다음</string>
    <string name="cal_frgment_text1">모든 필드를 입력하세요.</string>
    <string name="cal3_top_title1">현기증 난단 말이에요,</string>
    <string name="cal3_top_title2">정산금액</string>
    <string name="cal3_top_title3">을 입력해주세요.</string>
    <string name="cal3_text1">총 정산금액</string>
    <string name="cal3_text2">벌금액</string>
    <string name="cal3_text3">정산 인원수</string>
    <string name="cal3_text4">명</string>
    <string name="cal3_text5">벌금 납부 인원수</string>
    <string name="cal3_edit_text1">정산할 총 금액을 입력해주세요.</string>
    <string name="cal3_edit_text2">벌금이 있다면 입력해주세요.</string>
    <string name="cal3_edit_text3">정산 인원을 입력해주세요.</string>
    <string name="cal3_edit_text4">벌금을 납부할 총 인원을 입력해주세요.</string>
    <string name="cal1_frgment_text1">나의 벌금추가</string>
    <string name="cal1_frgment_text2">동료의 벌금추가</string>
    <string name="cal1_frgment_text3">벌금 없음</string>
    <string name="cal4_top_title1">정산결과</string>
    <string name="cal4_top_title2">입니다.</string>
    <string name="cal4_top_title3">확인해주세요.</string>
    <string name="cal4_btn_text1">정산완료</string>
    <string name="cal4_btn_text2">나가기</string>
    <string name="game_top_title1">오늘의 당첨자를 정하는</string>
    <string name="game_top_title2">미니게임</string>
    <string name="game_text1">룰렛</string>
    <string name="game_text2">사다리 타기</string>
    <string name="game_roulette_text1">1~8번까지 경품을 정하여 \n 당첨자를 뽑는 게임입니다.</string>
    <string name="game_roulette_text2">돌리기</string>
    <string name="roulette_text1">번 당첨</string>
    <string name="roulette_text2">결과는...?</string>
    <string name="main_top_title1">약속왕이 될 상인가,</string>
    <string name="main_top_title2">님 어서오세요.</string>
    <string name="main_text1">약속 잡기</string>
    <string name="main_text2">내 약속</string>
    <string name="main_text3">놀거리</string>
    <string name="main_text4">정산 하기</string>
    <string name="main_text5">미니 게임</string>
    <string name="main_text6">친구 관리</string>
    <string name="friend_text1">내 친구 목록</string>
    <string name="friend_btn_text">요청된 친구 목록</string>
    <string name="friend_request_top_title">새로운 친구를 찾아볼까요?</string>
    <string name="friend_request_edit_text">요청할 친구를 검색해 주세요.</string>
    <string name="friend_request_btn_text">검색</string>
    <string name="friend_request_text">초대할 친구를 선택해 주세요.</string>
    <string name="friend_request_list_text">친구 요청 목록입니다.</string>
    <string name="time">정보 없음</string>
    <string name="search_edit_text1">장소를 입력해 주세요.</string>
    <string name="search_text1">길을 잃었다~★\n어딜 가야할까</string>
    <string name="search_detail_text1">주소</string>
    <string name="search_detail_text2">전화 번호</string>
    <string name="search_detail_text3">위치 정보</string>
    <string name="search_detail_text4">번호가 제공되지 않습니다.</string>
    <string name="search_detail_text5">영업시간은 가게 측에 문의해주세요.</string>
    <string name="search_detail_btn_text">길찾기</string>
    <string name="preference_darkMode_key" translatable="false">darkModeOff</string>
    <string name="preference_loading_key" translatable="false">1</string>
    <string name="setting_text1">설정</string>
    <string name="setting_text2">프로필 설정</string>
    <string name="setting_text3">앱 설정</string>
    <string name="setting_text4">다크 모드</string>
    <string name="setting_text5">일반</string>
    <string name="setting_text6">또 만나요!</string>
    <string name="setting_text7">회원탈퇴</string>
    <string name="setting_chat_text1">개발진이 전부 모여있는</string>
    <string name="setting_chat_text2">채팅방으로 초대합니다!</string>
    <string name="setting_chat_text3">어떤 의견이든 말씀해주세요.</string>
    <string name="setting_chat_text4">카카오톡 오픈 채팅방</string>
    <string name="setting_chat_text5">늦지마 컴퍼니\nhttps://open.kakao.com/o/s7Gq0MAg</string>
    <string name="setting_chat_text6">디스코드 개발진 서버</string>
    <string name="setting_chat_text7">늦지마 컴퍼니 서버\nhttps://discord.gg/CTQaZPnG</string>
    <string name="setting_email_text1">님!</string>
    <string name="setting_email_text2">불편하셨거나 필요하신 부분을</string>
    <string name="setting_email_text3">이메일로 보내주세요!</string>
    <string name="setting_email_text4">sp10nomorelateness@gmail.com</string>
    <string name="setting_email_text5">다음 이메일로 보내주시면\n최대한 빠르게 답변해 드리겠습니다!</string>
    <string name="setting_email_text6">저희 앱을 사용해 주셔서 항상 감사드립니다.</string>
    <string name="setting_info_text1">앱 정보</string>
    <string name="setting_info_text2">개인정보 처리방침</string>
    <string name="setting_info_text3">오픈 라이선스</string>
    <string name="setting_info_text4">위치정보 이용약관</string>
    <string name="setting_info_text5">개인정보 수집 ‧및 이용안내</string>
    <string name="setting_info_text6">서비스 이용약관</string>
    <string name="setting_info_version">ver. Beta</string>
    <string name="setting_question_text1">안녕하세요.</string>
    <string name="setting_question_text2">늦지마 컴퍼니 입니다!</string>
    <string name="setting_question_text3">무엇을 도와드릴까요?</string>
    <string name="setting_question_text4">E-mail로 문의하기</string>
    <string name="setting_question_text5">오픈 채팅방으로 문의하기</string>
    <string name="dialog_info_text1">약관에 동의해 주세요.</string>
    <string name="dialog_info_text2">미동의 시 가입이 어렵습니다.</string>
    <string name="dialog_info_text3">약관에 동의합니다.</string>
    <string name="dialog_info_text4">개인정보 수집 ‧ 이용 동의</string>
    <string name="dialog_info_text5">위치정보 이용 동의</string>
    <string name="dialog_info_text6">전부 동의합니다.</string>
    <string name="dialog_dir_text1">검색 결과</string>
    <string name="dialog_back_text1">현재 진행중인 작업이 있습니다!</string>
    <string name="dialog_back_text2">취소하고 메인으로 돌아갈까요?</string>
    <string name="dialog_back_text3">확인</string>
    <string name="dialog_back_text4">취소</string>
    <string name="dialog_back_text5">동의</string>
    <string name="dialog_radio_text1">대중교통</string>
    <string name="dialog_radio_text2">자동차</string>
    <string name="dialog_radio_text3">도보</string>
    <string name="dialog_radio_text4">자전거</string>
    <string name="dialog_radio_selection_text1">친구와 도착시간을 공유해요!</string>
</resources>